--- a/cfgs/dimemas_ideal.cfg
+++ b/cfgs/dimemas_ideal.cfg
@@ -149,10 +149,11 @@
 
 "environment information" {"", 0, "", REPLACE_BY_NTASKS, 0.0, 0, 1};;
 
-"multi node information" {0, REPLACE_BY_NTASKS, "gainestown", 1, 1.0, 0.0, 0.0, 0, 1, 0, 0.0, 1, 1, 0.0};;
+"multi node information" {0, REPLACE_BY_NTASKS, "", REPLACE_BY_NTASKS_PER_NODE, 1.0, 0.0, 0.0, 0, 1, 0, 0.0, 1, 1, 0.0};;
 
 "predefined mapping information" {"1 TASKS_PER_NODE"};;
 
 "configuration files" {"", "", "REPLACE_BY_COLLECTIVES_PATH", ""};;
 
 "file system parameters" {0.0, 0.0, 8.0, 0, 1.0};;
+
